Syntax highlight code in text. Prevent <code> from wrapping

--- a/frontend/src/css/github-markdown.css
+++ b/frontend/src/css/github-markdown.css
@@ -686,7 +686,10 @@
 }
 
 .markdown-body code {
-  background-color: rgba(27,31,35,.05);
+  /*background-color: rgba(27,31,35,.05);*/
+  background-color: rgb(46, 46, 46);
+  color: #f8f8f2;
+  display: inline-block;
   border-radius: 3px;
   font-size: 85%;
   margin: 0;
@@ -718,7 +721,8 @@
 
 .markdown-body .highlight pre,
 .markdown-body pre {
-  background-color: #f6f8fa;
+  /*background-color: #212529;*/
+  background-color: rgb(46, 46, 46);
   border-radius: 3px;
   font-size: 85%;
   line-height: 1.45;
